specs-uat/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fn-watch-list-list
  namespace: fission
spec:
  hosts:
    - hom.api.siga.me
  gateways:
    - homolog/hom-istio-gateway
  http:
  - match:
    - uri:
        prefix: /router/watch_list/list
    rewrite:
      uri: /watch_list/list
    route:
    - destination:
        host: router.fission.svc.cluster.local
        port:
          number: 80
